--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Item List</title>
 
     <script src="./dist/bundle.js"></script>
+    <link rel="stylesheet" href="./assets/stylesheets/main.css">
+
   </head>
   <body>
     <div id="content"></div>
