--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Item List</title>
-    <link rel="shortcut icon" href="./assets/favicon.png">
+    <link rel="shortcut icon" href="./assets/favicon.jpg">
 
     <script src="./dist/bundle.js"></script>
     <link rel="stylesheet" href="./assets/stylesheets/main.css">
